--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.30",
+    "@types/react-beautiful-dnd": "^13.1.6",
     "@types/react-dom": "^18.2.14",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
